# adaptive-traffic-light-alg

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  circular-list.h  constants.cpp  constants.h  crossroad-manager.cpp  crossroad-manager.h  event.h  main.cpp  phase.h  stage.cpp  stage.h  traffic-light.cpp  traffic-light.h  utils.h
src/: circular-list.h  constants.cpp  crossroad-manager.cpp  event.h  main.cpp  stage.cpp  stage.h  utils.h
